--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										style="color: white;"> +91 93073
 										90853</a></li>
 								<li><i class="fas fa-map-marker-alt"></i>
-									Thane, Maharashtra</li>
+									Mulsi, Pune - 412115 Maharashtra</li>
 							</ul>
 						</div>
 					</div>
@@ -440,7 +440,7 @@
 						</div>
 						<span class="contact-text">
 							Location:
-							Thane-421203, Maharashtra, India
+							Mulsi, Pune - 412115, Maharashtra, India
 						</span>
 					</div>
 				</div>
