--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<h1 class="py-4 text-center font-weight-bold">About us </h1>
 				<div class="row">
 					<div class="col-lg-6">
-						<p class="text-justify">Established in the year 2018 at Thane, Maharashtra, we “Shri Ram And
+						<p class="text-justify">Established in the year 2018 at Pune, Maharashtra, we “Shri Ram And
 							Sons Enterprises ” are a
 							Sole Proprietorship based firm, engaged as the foremost supplier of construction material,
 							Interior decoration supply and fabrication material. Our products are high in demand due
